<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Biblioteca</string>
    <string name="hello_world"></string>
    <string name="action_settings">Settings</string>

    <string name="id_libro">Numero del libro</string>
    <string name="nombre_libro">Nombre del libro</string>
    <string name="autor">Autor del libro</string>
    <string name="editorial">Editorial del libro</string>
    <string name="isbn">ISBN</string>

    <string name="boton1">Registrar</string>
    <string name="boton2">Conculta</string>
    <string name="boton3">Baja</string>
    <string name="boton4">Modificar</string>
    <string name="boton5">Limpiar</string>





</resources>
