<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       tools:context=".libro">

       <LinearLayout
            android:layout_width="match_parent"
          android:layout_height="match_parent"
           android:orientation="vertical">


<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/id_libro"

/>
           <EditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:id="@+id/et_numero"
               android:inputType="number"/>

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:text="@string/nombre_libro"
 />

           <EditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:id="@+id/et_nombre"/>

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:text="@string/autor"
 />

           <EditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:id="@+id/et_autor"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"

               android:text="Editorial"
   />

           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/et_editorial"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"

               android:text="ISBN"
               />

           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/et_isbn"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Boton1"
            android:text="@string/boton1"
            android:onClick="Guardar"
            android:layout_weight="1"
            android:drawablePadding="16dp"


            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Boton2"
            android:text="@string/boton2"
            android:onClick="Consulta"
            android:layout_weight="1"

            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Boton3"
            android:text="@string/boton3"
            android:onClick="Eliminar"
            android:layout_weight="1"

            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Boton4"
            android:text="@string/boton4"
            android:onClick="Modificar"
            android:layout_weight="1"

            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton5"
            android:id="@+id/Boton5"
            android:onClick="Limpiar"
            android:layout_weight="1"
            />


    </LinearLayout>
</LinearLayout>





</ScrollView>

